--- a/app/frontend/src/components/UploadFile/UploadFile.module.css
+++ b/app/frontend/src/components/UploadFile/UploadFile.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     gap: 0.375em;
     cursor: pointer;
+    padding: 0.5rem;
 }
 
 .callout {
